--- a/styles.css
+++ b/styles.css
@@ -581,6 +581,7 @@ body {
     composes: creator-card;
 }
 
+/* Only Add Cover Photo for YouTube Section */
 .youtube-creator-card .cover-photo {
     width: 100%;
     height: 200px;
